Traduccion de las vistas de home, profile y transactions

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -1,5 +1,5 @@
 {
-    "appTitle": "Expense Manager",
+    "app_title": "Expense Manager",
     "homeTitle": "Home",
     "addTransaction": "Add Transaction",
     "summary": "Summary",
@@ -46,5 +46,58 @@
     "education": "Education",
     "subscriptions": "Subscriptions",
     "finance": "Finance",
-    "others": "Others"
+    "others": "Others",
+    "profile": "Profile",
+    "user": "User",
+    "no_email": "No email",
+    "general_stats": "General Statistics",
+    "total_transactions": "Total transactions",
+    "total_income": "Total income",
+    "total_expenses": "Total expenses",
+    "help_support": "Help & Support",
+    "help_center_soon": "Coming soon: Help Center",
+    "about": "About",
+    "about_description": "Personal Finance App",
+    "version": "Version",
+    "made_with_love": "Made with ❤️ in Flutter",
+    "logout_confirm": "Are you sure you want to logout?",
+    "transactions": "Transactions",
+    "totalAssets": "Total Assets",
+    "positive": "Positive",
+    "negative": "Negative",
+    "monthBalance": "Month Balance",
+    "surplus": "Surplus",
+    "deficit": "Deficit",
+    "incomeByCategory": "Income by Category",
+    "expenseByCategory": "Expenses by Category",
+    "seeAll": "See all",
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "august": "August",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "december": "December",
+    "confirm": "Confirm",
+    "logoutQuestion": "Do you want to log out?",
+    "logoutError": "Error logging out: {}",
+    "summaryPeriod": "Period Summary",
+    "searchPlaceholder": "Search by description or category...",
+    "noTransactionsMonth": "No transactions this month",
+    "noResults": "No results found",
+    "edit": "Edit",
+    "delete": "Delete",
+    "deleteTransaction": "Delete Transaction",
+    "confirmDelete": "Are you sure you want to delete this transaction?",
+    "transactionDeleted": "Transaction deleted",
+    "salary": "Salary",
+    "freelance": "Freelance",
+    "investments": "Investments",
+    "sale": "Sale",
+    "gift": "Gift"
 }
