--- a/assets/lang/es-ES.json
+++ b/assets/lang/es-ES.json
@@ -1,5 +1,5 @@
 {
-    "appTitle": "Administrador de Gastos",
+    "app_title": "Administrador de Gastos",
     "homeTitle": "Inicio",
     "addTransaction": "Agregar Transacción",
     "summary": "Resumen",
@@ -46,5 +46,61 @@
     "education": "Educación",
     "subscriptions": "Suscripciones",
     "finance": "Finanzas",
-    "others": "Otros"
+    "others": "Otros",
+    "profile": "Perfil",
+    "user": "Usuario",
+    "no_email": "Sin email",
+    "general_stats": "Estadísticas Generales",
+    "total_transactions": "Total de transacciones",
+    "total_income": "Total ingresos",
+    "total_expenses": "Total gastos",
+    "help_support": "Ayuda y Soporte",
+    "help_center_soon": "Próximamente: Centro de ayuda",
+    "about": "Acerca de",
+    "about_description": "App de Finanzas Personales",
+    "version": "Versión",
+    "made_with_love": "Desarrollado con ❤️ en Flutter",
+    "logout_confirm": "¿Estás seguro de que quieres cerrar sesión?",
+    "transactions": "Transacciones",
+    "monthlyBalance": "Balance del mes",
+    "monthlyIncome": "Ingreso",
+    "monthlyExpense": "Gasto",
+    "totalAssets": "Patrimonio total",
+    "positive": "Positivo",
+    "negative": "Negativo",
+    "monthBalance": "Balance del mes",
+    "surplus": "Superávit",
+    "deficit": "Déficit",
+    "incomeByCategory": "Ingresos por categoría",
+    "expenseByCategory": "Gastos por categoría",
+    "seeAll": "Ver todo",
+    "january": "Enero",
+    "february": "Febrero",
+    "march": "Marzo",
+    "april": "Abril",
+    "may": "Mayo",
+    "june": "Junio",
+    "july": "Julio",
+    "august": "Agosto",
+    "september": "Septiembre",
+    "october": "Octubre",
+    "november": "Noviembre",
+    "december": "Diciembre",
+    "confirm": "Confirmar",
+    "logoutQuestion": "¿Deseas cerrar sesión?",
+    "logoutError": "Error al cerrar sesión: {}",
+    "summaryPeriod": "Resumen del período",
+    "searchPlaceholder": "Buscar por descripción o categoría...",
+    "noTransactionsMonth": "No hay transacciones este mes",
+    "noResults": "No se encontraron resultados",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "deleteTransaction": "Eliminar transacción",
+    "confirmDelete": "¿Estás seguro de eliminar esta transacción?",
+    "transactionDeleted": "Transacción eliminada",
+    "salary": "Salario",
+    "freelance": "Freelance",
+    "investments": "Inversiones",
+    "sale": "Venta",
+    "gift": "Regalo"
 }
