--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -99,5 +99,50 @@
     "freelance": "Freelance",
     "investments": "Investments",
     "sale": "Sale",
-    "gift": "Gift"
+    "gift": "Gift",
+    "salary": "Salary",
+    "freelance": "Freelance",
+    "investments": "Investments",
+    "sale": "Sale",
+    "gift": "Gift",
+    "others": "Others",
+
+    "food": "Food",
+    "transport": "Transport",
+    "entertainment": "Entertainment",
+    "shopping": "Shopping",
+    "services": "Services",
+    "health": "Health",
+    "education": "Education",
+    "home": "Home",
+    "subscriptions": "Subscriptions",
+    "enter_valid_amount": "Enter a valid amount",
+  "transaction_updated": "Transaction updated",
+  "transaction_saved": "Transaction saved",
+
+  "edit_transaction": "Edit Transaction",
+  "add_transaction": "Add Transaction",
+
+  "income": "Income",
+  "expense": "Expense",
+  "description_label": "Description",
+  "enter_description": "Enter a description",
+
+  "amount_label": "Amount",
+  "enter_amount": "Enter an amount",
+  "enter_valid_number": "Enter a valid number",
+
+  "category_manual": "Category (Manual)",
+  "category_ai_manual": "Category (AI or Manual)",
+
+  "date_label": "Date",
+  "update": "Update",
+  "save": "Save",
+
+  "delete_transaction_title": "Delete transaction",
+  "delete_transaction_confirm": "Are you sure you want to delete this transaction?",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "transaction_deleted": "Transaction deleted",
+  "delete_transaction": "Delete transaction"
 }
